--- a/RayTracerGUI/CG_coursework.csproj
+++ b/RayTracerGUI/CG_coursework.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColorCalculatoin.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Objects.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -60,6 +63,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RayTracer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SceneSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Vector.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
