--- a/RayTracerGUI/CG_coursework.csproj
+++ b/RayTracerGUI/CG_coursework.csproj
@@ -84,6 +84,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="obj_models\bishop.obj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
