--- a/RayTracerGUI/CG_coursework.csproj
+++ b/RayTracerGUI/CG_coursework.csproj
@@ -54,9 +54,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sources\ChessLoader.cs" />
-    <Compile Include="sources\ColorCalculatoin.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="sources\ColorCalculatoin.cs" />
     <Compile Include="sources\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,14 +63,13 @@
     </Compile>
     <Compile Include="sources\Objects.cs" />
     <Compile Include="sources\Program.cs" />
-    <Compile Include="sources\RayTracer.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="sources\SceneSettings.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="sources\RayTracer.cs" />
+    <Compile Include="sources\RayTracerClass.cs" />
+    <Compile Include="sources\SceneSettings.cs" />
     <Compile Include="sources\Vector.cs" />
-    <EmbeddedResource Include="sources\Form1.resx" />
+    <EmbeddedResource Include="sources\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
